src/snapshots/blog__snapshot@2019__11__07__Rust-1.39.0.html.snap
---
source: src/lib.rs
expression: content
input_file: site/2019/11/07/Rust-1.39.0.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Announcing Rust 1.39.0 | Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Announcing Rust 1.39.0 | Rust Blog">
     <meta name="twitter:description" content="Empowering everyone to build reliable and efficient software.">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Announcing Rust 1.39.0 | Rust Blog" />
    <meta property="og:description" content="Empowering everyone to build reliable and efficient software.">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../images/favicon.svg">
    <link rel="manifest" href="../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/feed.xml" title="Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Announcing Rust 1.39.0" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Announcing Rust 1.39.0</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Nov. 7, 2019 &middot; The Rust Release Team
    
    </div>

    <div class="post">
      <p>The Rust team is happy to announce a new version of Rust, 1.39.0. Rust is a programming language that is empowering everyone to build reliable and efficient software.</p>
<p>If you have a previous version of Rust installed via rustup, getting Rust 1.39.0 is as easy as:</p>
<pre><code class="language-console">$ rustup update stable
</code></pre>
<p>If you don't have it already, you can <a href="https://www.rust-lang.org/install.html">get <code>rustup</code></a> from the appropriate page on our website, and check out the <a href="https://github.com/rust-lang/rust/blob/stable/RELEASES.md#version-1390-2019-11-07">detailed release notes for 1.39.0</a> on GitHub.</p>
<h2><a href="#whats-in-1390-stable" aria-hidden="true" class="anchor" id="whats-in-1390-stable"></a>What's in 1.39.0 stable</h2>
<p>The highlights of Rust 1.39.0 include <code>async</code>/<code>.await</code>, shared references to by-move bindings in <code>match</code> guards, and attributes on function parameters. Also, see the <a href="https://github.com/rust-lang/rust/blob/stable/RELEASES.md#version-1390-2019-11-07">detailed release notes</a> for additional information.</p>
<h3><a href="#the-await-is-over-async-fns-are-here" aria-hidden="true" class="anchor" id="the-await-is-over-async-fns-are-here"></a>The <code>.await</code> is over, <code>async fn</code>s are here</h3>
<p>Previously in Rust 1.36.0, <a href="https://blog.rust-lang.org/2019/07/04/Rust-1.36.0.html#the-future-is-here">we announced</a> that the <a href="https://doc.rust-lang.org/nightly/std/future/trait.Future.html"><code>Future</code></a> trait is here. Back then, we noted that:</p>
<blockquote>
<p>With this stabilization, we hope to give important crates, libraries, and the ecosystem time to prepare for <code>async</code> / <code>.await</code>, which we'll tell you more about in the future.</p>
</blockquote>
<p>A promise made is a promise kept. So in Rust 1.39.0, we are pleased to announce that <code>async</code> / <code>.await</code> is stabilized! Concretely, this means that you can define <code>async</code> functions and blocks and <code>.await</code> them.</p>
<p>An <code>async</code> function, which you can introduce by writing <code>async fn</code> instead of <code>fn</code>, does nothing other than to return a <code>Future</code> when called. This <code>Future</code> is a suspended computation which you can drive to completion by <code>.await</code>ing it. Besides <code>async fn</code>, <code>async { ... }</code> and <code>async move { ... }</code> blocks, which act like closures, can be used to define &quot;async literals&quot;.</p>
<p>For more on the release of <code>async</code> / <code>.await</code>, read <a href="https://blog.rust-lang.org/2019/11/07/Async-await-stable.html">Niko Matsakis's blog post</a>.</p>
<h3><a href="#references-to-by-move-bindings-in-match-guards" aria-hidden="true" class="anchor" id="references-to-by-move-bindings-in-match-guards"></a>References to by-move bindings in <code>match</code> guards</h3>
<p>When pattern matching in Rust, a variable, also known as a &quot;binding&quot;, can be bound in the following ways:</p>
<ul>
<li>
<p>by-reference, either immutably or mutably. This can be achieved explicitly e.g. through <code>ref my_var</code> or <code>ref mut my_var</code> respectively. Most of the time though, the binding mode will be inferred automatically.</p>
</li>
<li>
<p>by-value -- either by-copy, when the bound variable's type implements <code>Copy</code>, or otherwise <strong><em>by-move</em></strong>.</p>
</li>
</ul>
<p>Previously, Rust would forbid taking shared references to <strong><em>by-move</em></strong> bindings in the <code>if</code> guards of <code>match</code> expressions. This meant that the following code would be rejected:</p>
<pre><code class="language-rust">fn main() {
    let array: Box&lt;[u8; 4]&gt; = Box::new([1, 2, 3, 4]);

    match array {
        nums
//      ---- `nums` is bound by move.
            if nums.iter().sum::&lt;u8&gt;() == 10
//                 ^------ `.iter()` implicitly takes a reference to `nums`.
        =&gt; {
            drop(nums);
//          ----------- `nums` was bound by move and so we have ownership.
        }
        _ =&gt; unreachable!(),
    }
}
</code></pre>
<p><a href="https://github.com/rust-lang/rust/pull/63118/#issuecomment-522823925">With Rust 1.39.0</a>, the snippet above is now accepted by the compiler. We hope that this will give a smoother and more consistent experience with <code>match</code> expressions overall.</p>
<h3><a href="#attributes-on-function-parameters" aria-hidden="true" class="anchor" id="attributes-on-function-parameters"></a>Attributes on function parameters</h3>
<p>With Rust 1.39.0, attributes are now allowed on parameters of functions, closures, and function pointers. Whereas before, you might have written:</p>
<pre><code class="language-rust">#[cfg(windows)]
fn len(slice: &amp;[u16]) -&gt; usize {
    slice.len()
}
#[cfg(not(windows))] 
fn len(slice: &amp;[u8]) -&gt; usize {
    slice.len()
}
</code></pre>
<p>...<a href="https://github.com/rust-lang/rust/pull/64010/">you can now</a>, more succinctly, write:</p>
<pre><code class="language-rust">fn len(
    #[cfg(windows)] slice: &amp;[u16], // This parameter is used on Windows.
    #[cfg(not(windows))] slice: &amp;[u8], // Elsewhere, this one is used.
) -&gt; usize {
    slice.len()
}
</code></pre>
<p>The attributes you can use in this position include:</p>
<ol>
<li>
<p>Conditional compilation: <code>cfg</code> and <code>cfg_attr</code></p>
</li>
<li>
<p>Controlling lints: <code>allow</code>, <code>warn</code>, <code>deny</code>, and <code>forbid</code></p>
</li>
<li>
<p>Helper attributes used by procedural macro attributes applied to items.</p>
<p>Our hope is that this will be used to provide more readable and ergonomic macro-based DSLs throughout the ecosystem.</p>
</li>
</ol>
<h3><a href="#borrow-check-migration-warnings-are-hard-errors-in-rust-2018" aria-hidden="true" class="anchor" id="borrow-check-migration-warnings-are-hard-errors-in-rust-2018"></a>Borrow check migration warnings are hard errors in Rust 2018</h3>
<p>In the 1.36.0 release, <a href="https://blog.rust-lang.org/2019/07/04/Rust-1.36.0.html#nll-for-rust-2015">we announced</a> that NLL had come to Rust 2015 after first being released for Rust 2018 in <a href="https://blog.rust-lang.org/2018/12/06/Rust-1.31-and-rust-2018.html#non-lexical-lifetimes">1.31</a>.</p>
<p>As noted in the 1.36.0 release, the old borrow checker had some bugs which would allow memory unsafety. These bugs were fixed by the NLL borrow checker. As these fixes broke some stable code, we decided to gradually phase in the errors by checking if the old borrow checker would accept the program and the NLL checker would reject it. If so, the errors would instead become warnings.</p>
<p>With Rust 1.39.0, these warnings are now <a href="https://github.com/rust-lang/rust/pull/63565">errors in Rust 2018</a>.
In the next release, Rust 1.40.0, <a href="https://github.com/rust-lang/rust/pull/64221">this will also apply to Rust 2015</a>, which will finally allow us to <a href="https://github.com/rust-lang/rust/pull/64790">remove the old borrow checker</a>, and keep the compiler clean.</p>
<p>If you are affected, or want to hear more, read <a href="https://blog.rust-lang.org/2019/11/01/nll-hard-errors.html">Niko Matsakis's blog post</a>.</p>
<h3><a href="#more-const-fns-in-the-standard-library" aria-hidden="true" class="anchor" id="more-const-fns-in-the-standard-library"></a>More <code>const fn</code>s in the standard library</h3>
<p>With Rust 1.39.0, the following functions became <code>const fn</code>:</p>
<ul>
<li><a href="https://doc.rust-lang.org/std/vec/struct.Vec.html#method.new"><code>Vec::new</code></a>, <a href="https://doc.rust-lang.org/std/string/struct.String.html#method.new"><code>String::new</code></a>, and <a href="https://doc.rust-lang.org/std/collections/linked_list/struct.LinkedList.html#method.new"><code>LinkedList::new</code></a></li>
<li><a href="https://doc.rust-lang.org/std/primitive.str.html#method.len"><code>str::len</code></a>, <a href="https://doc.rust-lang.org/std/primitive.slice.html#method.len"><code>[T]::len</code></a>, and <a href="https://doc.rust-lang.org/std/primitive.str.html#method.as_bytes"><code>str::as_bytes</code></a></li>
<li><a href="https://doc.rust-lang.org/std/primitive.i8.html#method.abs"><code>abs</code></a>, <a href="https://doc.rust-lang.org/std/primitive.i8.html#method.wrapping_abs"><code>wrapping_abs</code></a>, and <a href="https://doc.rust-lang.org/std/primitive.i8.html#method.overflowing_abs"><code>overflowing_abs</code></a></li>
</ul>
<h3><a href="#additions-to-the-standard-library" aria-hidden="true" class="anchor" id="additions-to-the-standard-library"></a>Additions to the standard library</h3>
<p>In Rust 1.39.0 the following functions were stabilized:</p>
<ul>
<li><a href="https://doc.rust-lang.org/std/pin/struct.Pin.html#method.into_inner"><code>Pin::into_inner</code></a></li>
<li><a href="https://doc.rust-lang.org/std/time/struct.Instant.html#method.checked_duration_since"><code>Instant::checked_duration_since</code></a> and <a href="https://doc.rust-lang.org/std/time/struct.Instant.html#method.saturating_duration_since"><code>Instant::saturating_duration_since</code></a></li>
</ul>
<h3><a href="#other-changes" aria-hidden="true" class="anchor" id="other-changes"></a>Other changes</h3>
<p>There are other changes in the Rust 1.39.0 release: check out what changed in <a href="https://github.com/rust-lang/rust/blob/stable/RELEASES.md#version-1390-2019-11-07">Rust</a>, <a href="https://doc.rust-lang.org/nightly/cargo/CHANGELOG.html#cargo-139-2019-11-07">Cargo</a>, and <a href="https://github.com/rust-lang/rust-clippy/blob/master/CHANGELOG.md#rust-139">Clippy</a>.</p>
<p>Please also see the <a href="https://github.com/rust-lang/rust/blob/stable/RELEASES.md#compatibility-notes">compatibility notes</a> to check if you're affected by those changes.</p>
<h2><a href="#contributors-to-1390" aria-hidden="true" class="anchor" id="contributors-to-1390"></a>Contributors to 1.39.0</h2>
<p>Many people came together to create Rust 1.39.0. We couldn't have done it
without all of you. <a href="https://thanks.rust-lang.org/rust/1.39.0/">Thanks!</a></p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../scripts/highlight.js"></script>
  </body>
</html>
